--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "dev": "yarn workspaces run dev",
     "dev:web": "yarn workspace web run start",
     "dev:api": "yarn workspace api run dev",
-    "build": "yarn workspaces run build",
+    "build": "  un build",
     "test:web:watch": "yarn workspace web run test:watch",
     "test:api:watch": "yarn workspace api run test:watch",
     "test:ci:all": "yarn workspaces run test:ci:all",
