--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -5,9 +5,8 @@
   "private": true,
   "scripts": {
     "start": "react-scripts start",
-    "dev": "yarn run start",
     "build": "react-scripts build",
-    "netlify:build": "yarn run build",
+    "netlify:build": "npm run build",
     "test": "react-scripts test",
     "test:watch": "react-scripts test --watchAll",
     "test:ci:all": "cross-env CI=true react-scripts test --all --env=jsdom",
